--- a/templates/main.html
+++ b/templates/main.html
@@ -50,7 +50,7 @@
     </div>
     
     <footer class="mt-8 text-center text-gray-500 text-sm py-4">
-        <p>© 2025 Survive and Suffer</p>
+        <p>Made with 💖 </span> by <a href="https://github.com/AaravAtGit" class="text-indigo-600 hover:text-indigo-700">AaravAtGit</a></p>
     </footer>
 
     <script>
